Fix keyboard on small mobile screens hiding composer (#2631)

--- a/less/forum/Composer.less
+++ b/less/forum/Composer.less
@@ -117,6 +117,7 @@
       position: fixed;
       top: 0;
       height: 350px !important;
+      max-height: 100%;
       padding-top: @header-height-phone;
 
       &:before {
